styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;

    /* Experiment: Inspecting and copying the Apple website */
    --globalnav-background: rgba(250, 250, 252, .8);

    --sk-body-background-color: rgb(255, 255, 255);

    --sk-button-padding-horizontal: 22px;
    --sk-button-padding-vertical: 12px;
    --sk-button-min-width-basis: 70px;
    --sk-button-margin-horizontal: 18px;
    --sk-button-margin-vertical: 18px;
    --sk-button-color: rgb(255, 255, 255);
    --sk-button-color-hover: var(--sk-button-color);
    --sk-button-color-active: var(--sk-button-color-hover);
    --sk-button-border-color: transparent;
    --sk-button-border-radius: 980px;
    --sk-button-border-width: 1px;
    --sk-button-box-sizing: content-box;
    --sk-button-width: auto;
    --sk-button-display: inline-block;
    --sk-button-background: rgb(0, 113, 227);
    --sk-button-background-hover: #0076DF;
    --sk-button-background-active: #006EDB;
}

body {
    font-family: SF Pro Text, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
    text-align: center;
    font-style: normal;
}

h1 {
    margin: 20px;
}

h2 {
    margin: 15px;
}

article, ul, ol {
    display: inline-block;
    box-shadow: 0 0 5px 5px rgb(0 0 255 / 0.2);
    padding: 13px;
    border-radius: 10px;
}

p {
    text-align: left;
}

li {
    margin: 10px;
    text-align: left;
}

a {
    color: #06c;
    text-decoration: none;
    cursor: pointer;
    font-weight: 400;
    text-align: center;
    font-size: 21px;
    line-height: 1.381002381;
}

a:hover {
    text-decoration: underline;
}

img {
    border-radius: 15px;
}

.steps-list {
    max-width: 300px;
}

/* Experiment: Inspecting and copying the Apple website */
button {
    font-size: 17px;
    line-height: 1.1764805882;
    font-weight: 400;
    letter-spacing: -.022em;
    font-family: SF Pro Text, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
    background: var(--sk-button-background, rgb(0, 113, 227));
    color: var(--sk-button-color, rgb(255, 255, 255));
    border-radius: var(--sk-button-border-radius, 980px);
    padding: var(--sk-button-padding-vertical, 12px) var(--sk-button-padding-horizontal, 22px);
    margin: var(--sk-button-margin-horizontal, 18px) var(--sk-button-margin-vertical, 18px);
    min-width: var(--sk-button-min-width-basis, 70px);
    border-color: var(--sk-button-border-color, transparent);
    border-width: var(--sk-button-border-width, 1px);
    box-sizing: var(--sk-button-box-sizing, content-box);
    width: var(--sk-button-width, auto);
    display: var(--sk-button-display, inline-block);
}

button:hover {
    color: var(--sk-button-color-hover, rgb(255, 255, 255));
    background-color: var(--sk-button-background-hover, #0076DF);
    cursor: pointer;
}

button:active {
    color: var(--sk-button-color-active, rgb(255, 255, 255));
    background-color: var(--sk-button-background-active, #006EDB);
}

